New in v7.8.6
=============

Features
--------

* Guess file format from file name on new_post (Issue #2798)
* Use BaguetteBox as lightbox in base theme (Issue #2777)
* New ``deduplicate_ids`` filter, for preventing duplication of HTML
  ``id`` attributes (Issue #2570)
* Ported gallery image layout to base theme (Issue #2775)
* Better error handling when posts can't be parsed (Issue #2771)
* Use ``.theme`` files to store theme metadata (Issue #2758)
* New ``add_header_permalinks`` filter, for Sphinx-style header links
  (Issue #2636)
* Added alternate links for gallery translations (Issue #993)

Bugfixes
--------

* Use ``locale.getdefaultlocale()`` for better locale guessing
  (credit: @madduck)
* Save dependencies for template hooks properly (using ``.__doc__`` or
  ``.template_registry_identifier`` for callables)
* Enable larger panorama thumbnails (Issue #2780)
* Disable ``archive_rss`` link handler, which was useless because no
  such RSS was ever generated (Issue #2783)
* Ignore files ending wih "bak" (Issue #2740)
* Use page.tmpl by default, which is inherited from story.tmpl (Issue
  #1891)

Other
-----

* Limit Jupyter support to notebook >= 4.0.0 (it already was in
  requirements-extras.txt; Issue #2733)

New in v7.8.5
=============

Math support changes
--------------------

* If you edited templates related to indexes and posts (``index.tmpl``,
  ``post.tmpl``, ``index_helper.tmpl``, ``post_helper.tmpl``) in your
  templates, you should adjust them to use ``math_helper.tmpl``.
* If you are using KaTeX, you should remove the CSS snippet from your
  configuration (templates), as that is now handled by Nikola.

Features
--------

* Get rid of ``THEME_REVEAL_CONFIG_*`` settings, use global context
  instead (Issue #2485)
* New emoji shortcode
* Add ``SECTION_PATH`` support to move the section indexes to a
  user-defined location (Issue #2738)
* Add a list of template variables to documentation (Issues #2328,