@@ -1,3 +1,11 @@
+New in master
+=============
+
+Features
+--------
+
+* Support for YAML metadata (Issue #2801)
+
 New in v7.8.6
 =============
 
